Add ability to publish files